--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "axios": "^1.7.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
     "eslint": "^8.50.0",
-    "prettier": "^3.1.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.0"
+    "eslint-plugin-react": "^7.33.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.4.17"
   },
   "browserslist": {
     "production": [
